# tic-tac-toe

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: ci.yml
src/: CMakeLists.txt  main.cpp
src/ai/: receive_ai_command.cpp  receive_ai_command.hpp  receive_ai_command.test.cpp
src/app/: app_controller.cpp  app_controller.hpp  commands.cpp  commands.hpp
src/board/: board.cpp  board.hpp  board.natvis  square.cpp  square.hpp
src/command/: command.hpp  command_factory.cpp  command_factory.hpp
src/game/: board.cpp  board.hpp  board.test.cpp  command.hpp  commands.cpp  commands.hpp  execute_command.hpp  execute_command.test.cpp  game_players.cpp  game_players.hpp  game_state.cpp  game_state.hpp  player.cpp  player.hpp  player.test.cpp  win_conditions.cpp  win_conditions.hpp  win_conditions.test.cpp
src/grid/: coords.hpp  grid.hpp  grid.natvis  gridcell.hpp
src/input/: eval_input.cpp  eval_input.hpp  receive_player_command.cpp  receive_player_command.hpp
src/minimax/: minimax.cpp  minimax.hpp  stats.cpp  stats.hpp
src/output/: console_output.cpp  console_output.hpp  console_writer.cpp  console_writer.hpp  generate_output.cpp  generate_output.hpp  generate_output.test.cpp  player_symbol.cpp  player_symbol.hpp  print_square.cpp  print_square.hpp  show_board.cpp  show_board.hpp  show_board.test.cpp  show_game_over.cpp  show_game_over.hpp  show_game_over.test.cpp  show_output.cpp
src/tic_tac_toe/: CMakeLists.txt
src/tic_tac_toe/ai/: receive_ai_command.cpp  receive_ai_command.hpp
src/tic_tac_toe/game/: board.cpp  board.hpp  board.test.cpp  command.test.cpp  execute_command.cpp  execute_command.hpp  execute_command.test.cpp  game_state.cpp  game_state.hpp  game_state.test.cpp  player.cpp  player.hpp  player.test.cpp  square.cpp  square.hpp  square.test.cpp
src/tic_tac_toe/input/: eval_input.cpp  eval_input.hpp  eval_input.test.cpp  read_command.cpp  read_command.hpp  receive_player_command.cpp  receive_player_command.hpp
src/tic_tac_toe/output/: generate_output.cpp  generate_output.hpp  generate_output.test.cpp  show_output.cpp  show_output.hpp
tests/: CMakeLists.txt  ai_receive_ai_command.cpp  app_app_controller.cpp  app_commands.cpp  board_board.cpp  board_square.cpp  command_command.cpp  game_board.cpp  game_command.cpp  game_commands.cpp  game_execute_command.cpp  game_game_players.cpp  game_game_state.cpp  game_player.cpp  game_square.cpp  game_win_conditions.cpp  grid_coords.cpp  grid_grid.cpp  grid_gridcell.cpp  input_eval_input.cpp  minimax_minimax.cpp  minimax_stats.cpp  output_player_symbol.cpp  output_print_square.cpp  output_show_board.cpp  output_show_game_over.cpp
